--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.15",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
+    "react-circular-progressbar": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
